--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -150,6 +150,7 @@ test_sources = \
 	leaky-polygon.c					\
 	line-width.c					\
 	line-width-scale.c				\
+	line-width-tolerance.c				\
 	line-width-zero.c				\
 	linear-gradient.c				\
 	linear-gradient-extend.c			\
