--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -149,6 +149,7 @@ test_sources = \
 	leaky-dashed-stroke.c				\
 	leaky-polygon.c					\
 	line-width.c					\
+	line-width-overlap.c				\
 	line-width-scale.c				\
 	line-width-tolerance.c				\
 	line-width-zero.c				\
