arc: Handle radius == 0 the same no matter the arc direction
Commit a0ea0b63fdd38a73d6696da5cd4800d9a7289240 fixed cairo_arc() but
did not apply the same patch to cairo_arc_negative(). This patch fixes
that oversight.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -11,6 +11,7 @@ test_sources = \
 	alpha-similar.c					\
 	arc-infinite-loop.c				\
 	arc-looping-dash.c				\
+	arc-negative.c					\
 	api-special-cases.c				\
 	big-line.c					\
 	big-trap.c					\
