--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -292,6 +292,7 @@ test_sources = \
 	twin-antialias-mixed.c				\
 	twin-antialias-none.c				\
 	twin-antialias-subpixel.c			\
+	unaligned-box.c				\
 	unantialiased-shapes.c				\
 	unbounded-operator.c				\
 	user-data.c					\
