perf/micro: Add wave
Benjamin just demonstrated this funky trick for generating pixel
outlines, and as no good deed should go unpunished, I've added his code
to the perf suite.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -48,6 +48,7 @@ cairo_perf_micro_SOURCES =		\
 	micro/glyphs.c		\
 	micro/twin.c			\
 	micro/unaligned-clip.c	\
+	micro/wave.c			\
 	micro/world-map.c		\
 	micro/world-map.h		\
 	micro/zrusin.c		\
