--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -212,14 +212,12 @@ cairo_ps_headers = cairo-ps.h
 cairo_ps_private = cairo-ps-surface-private.h
 cairo_ps_sources = cairo-ps-surface.c
 
-cairo_deflate_stream_sources = cairo-deflate-stream.c
+_cairo_deflate_stream_sources = cairo-deflate-stream.c
+cairo_sources += $(_cairo_deflate_stream_sources)
 
 cairo_pdf_headers = cairo-pdf.h
 cairo_pdf_private = cairo-pdf-surface-private.h
 cairo_pdf_sources = cairo-pdf-surface.c
-if CAIRO_HAS_PDF_SURFACE
-req_cairo_deflate_stream_sources = $(cairo_deflate_stream_sources)
-endif
 
 cairo_svg_headers = cairo-svg.h
 cairo_svg_private = cairo-svg-surface-private.h
@@ -251,16 +249,13 @@ cairo_xlib_private = \
 	cairo-xlib-surface-private.h \
 	cairo-xlib-xrender-private.h \
 	$(NULL)
-if BUILD_XLIB_XCB
-cairo_xlib_sources = cairo-xlib-xcb-surface.c
-else
 cairo_xlib_sources = \
 	cairo-xlib-display.c \
 	cairo-xlib-screen.c \
 	cairo-xlib-surface.c \
 	cairo-xlib-visual.c \
+	cairo-xlib-xcb-surface.c \
 	$(NULL)
-endif
 
 cairo_xlib_xrender_headers = cairo-xlib-xrender.h
 
@@ -270,18 +265,14 @@ cairo_xcb_sources = \
 		    cairo-xcb-connection.c \
 		    cairo-xcb-connection-core.c \
 		    cairo-xcb-connection-render.c \
+		    cairo-xcb-connection-shm.c \
 		    cairo-xcb-screen.c \
+		    cairo-xcb-shm.c \
 		    cairo-xcb-surface.c \
 		    cairo-xcb-surface-cairo.c \
 		    cairo-xcb-surface-core.c \
 		    cairo-xcb-surface-render.c \
 		    $(NULL)
-if BUILD_XCB_SHM
-cairo_xcb_sources += \
-		    cairo-xcb-shm.c \
-		    cairo-xcb-connection-shm.c \
-		    $(NULL)
-endif
 
 cairo_qt_headers = cairo-qt.h
 cairo_qt_cxx_sources = cairo-qt-surface.cpp
@@ -379,9 +370,6 @@ cairo_drm_xr_sources = \
 
 cairo_script_headers = cairo-script.h
 cairo_script_sources = cairo-script-surface.c
-if CAIRO_HAS_SCRIPT_SURFACE
-req_cairo_deflate_stream_sources = $(cairo_deflate_stream_sources)
-endif
 
 cairo_tee_headers = cairo-tee.h
 cairo_tee_private = cairo-tee-surface-private.h
@@ -389,13 +377,6 @@ cairo_tee_sources = cairo-tee-surface.c
 
 cairo_xml_headers = cairo-xml.h
 cairo_xml_sources = cairo-xml-surface.c
-if CAIRO_HAS_XML_SURFACE
-req_cairo_deflate_stream_sources = $(cairo_deflate_stream_sources)
-endif
 
 cairo_vg_headers = cairo-vg.h
 cairo_vg_sources = cairo-vg-surface.c
-
-cairo_sources += \
-		 $(req_cairo_deflate_stream_sources) \
-		 $(NULL)
