test: Update generation of constructors on win32
51bd27afa147f78c8f4f3778cee725b6444e7eb0 removed
make-cairo-test-constructors.c but did not update the win32 Makefiles
accordingly.

cairo-test-constructors.c is now generated by a make target which runs
make-cairo-test-constructors.sh.

--- a/test/Makefile.win32
+++ b/test/Makefile.win32
@@ -14,11 +14,8 @@ TESTCORE_SOURCES = \
 
 all: cairo-test-suite.exe
 
-make-cairo-test-constructors.exe: $(CFG)/make-cairo-test-constructors.obj
-	$(CC) $(OPT) $(MS_MDFLAGS) $(CFG)/make-cairo-test-constructors.obj -Fe"$@" -link $(LDFLAGS) user32.lib /NODEFAULTLIB:library
-
-cairo-test-constructors.c: $(test_sources) make-cairo-test-constructors.exe
-	./make-cairo-test-constructors.exe $(test_sources) > $@
+cairo-test-constructors.c: Makefile.sources Makefile.win32 $(test_sources) make-cairo-test-constructors.sh
+	sh ./make-cairo-test-constructors.sh $(test_sources) > $@
 
 SOURCES = $(cairo_test_suite_sources) $(test_sources) cairo-test-constructors.c
 
