--- a/test/pdiff/Makefile.win32
+++ b/test/pdiff/Makefile.win32
@@ -8,12 +8,9 @@ SOURCES = \
 	pdiff.c \
 	$(NULL)
 
-OBJECTS = $(subst .c,.obj,$(SOURCES))
+OBJECTS = $(patsubst %.c, $(CFG)/%-static.obj, $(SOURCES))
 
-all: pdiff.lib
+all: $(CFG)/pdiff.lib
 
-pdiff.lib: $(OBJECTS)
+$(CFG)/pdiff.lib: $(OBJECTS)
 	lib -NOLOGO -OUT:$@ $(OBJECTS)
-
-%.obj: %.c
-	@$(CC) $(CFLAGS) -DCAIRO_WIN32_STATIC_BUILD=1 -c -Fo"$@" $<
