--- a/Makefile.win32
+++ b/Makefile.win32
@@ -4,23 +4,10 @@
 top_srcdir = .
 include $(top_srcdir)/build/Makefile.win32.common
 
-SUBDIRS = src
-TEST_SUBDIRS = boilerplate test
+all: cairo
 
-all: inform cairo
+cairo: inform
+	@$(MAKE) -C src -f Makefile.win32
 
-cairo: src/cairo-features.h
-	@list='$(SUBDIRS)'; for f in $$list ; do \
-		echo making all in $$f... ; \
-		($(MAKE) -C $$f -f Makefile.win32) || exit 1 ; \
-	done
-
-test: cairo
-	@list='$(TEST_SUBDIRS)'; for f in $$list ; do \
-		echo making all in $$f... ; \
-		($(MAKE) -C $$f -f Makefile.win32) || exit 1 ; \
-	done
-	@(cd test ; make -f Makefile.win32 test)
-
-html:
-	@(cd test ; make -f Makefile.win32 html)
+test: inform
+	@$(MAKE) -C test -f Makefile.win32 test
