--- a/test/Makefile.win32
+++ b/test/Makefile.win32
@@ -4,9 +4,9 @@ include $(top_srcdir)/test/Makefile.sources
 
 CFLAGS += -I$(top_srcdir)/boilerplate -I./pdiff
 
-TEST_LIBS = ./pdiff/$(CFG)/pdiff.lib $(top_srcdir)/src/$(CFG)/cairo-static.lib $(top_srcdir)/boilerplate/$(CFG)/boiler.lib
+TEST_LIBS = ./pdiff/$(CFG)/pdiff.lib $(top_builddir)/src/$(CFG)/cairo-static.lib $(top_builddir)/boilerplate/$(CFG)/boiler.lib
 
-all: inform cairo-test-suite.exe
+all: inform $(CFG)/cairo-test-suite.exe
 
 cairo-test-constructors.c: Makefile.sources Makefile.win32 $(test_sources) make-cairo-test-constructors.sh
 	sh ./make-cairo-test-constructors.sh $(test_sources) > $@
@@ -15,21 +15,21 @@ SOURCES = $(cairo_test_suite_sources) $(test_sources) cairo-test-constructors.c
 
 OBJECTS = $(patsubst %.c, $(CFG)/%-static.obj, $(SOURCES))
 
-cairo-test-suite.exe: $(OBJECTS) $(TEST_LIBS)
+$(CFG)/cairo-test-suite.exe: $(OBJECTS) $(TEST_LIBS)
 	@$(LD) $(CAIRO_LDFLAGS) -OUT:$@ $(OBJECTS) $(TEST_LIBS) $(CAIRO_LIBS)
 
 ./pdiff/$(CFG)/pdiff.lib:
 	$(MAKE) -C pdiff -f Makefile.win32
 
-$(top_srcdir)/src/$(CFG)/cairo-static.lib:
+$(top_builddir)/src/$(CFG)/cairo-static.lib:
 	$(MAKE) -C $(top_srcdir)/src -f Makefile.win32
 
-$(top_srcdir)/boilerplate/$(CFG)/boiler.lib:
+$(top_builddir)/boilerplate/$(CFG)/boiler.lib:
 	$(MAKE) -C $(top_srcdir)/boilerplate -f Makefile.win32
 
 .PHONY: check test
 
-check: inform cairo-test-suite.exe
-	./cairo-test-suite.exe
+check: inform $(CFG)/cairo-test-suite.exe
+	./$(CFG)/cairo-test-suite.exe
 
 test: inform check
