perf: Fix build on win32
The performance tools build system for Win32 hasn't been maintained
for some time.  The makefiles are now structured as in other
directories (Makefile.sources used by both Makefile.am and
Makefile.win32) and some additional code hides os-specific parts.

--- a/Makefile.win32
+++ b/Makefile.win32
@@ -9,5 +9,8 @@ all: cairo
 cairo: inform
 	@$(MAKE) -C src -f Makefile.win32
 
+perf: inform
+	@$(MAKE) -C perf -f Makefile.win32 perf
+
 test: inform
 	@$(MAKE) -C test -f Makefile.win32 test
