error: Do not define _cairo_error twice
cairo-perf-trace uses cairo-hash.c, which calls _cairo_error.

Instead of redefining it in cairo-perf-trace.c it can be abstracted in
a separate source which is directly included in the build of
cairo-perf-trace.

This avoids visibility issues when compiling cairo-perf-trace with a
statically linked cairo library on architectures which do not support
hidden visibility (example: win32).

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -123,6 +123,7 @@ cairo_sources = \
 	cairo-composite-rectangles.c \
 	cairo-debug.c \
 	cairo-device.c \
+	cairo-error.c \
 	cairo-fixed.c \
 	cairo-font-face.c \
 	cairo-font-face-twin.c \
