test: Merge text-antialias-*
The test-antialias-* tests perform the same operation with just a
different antialias flag. Sharing the code ensures that they are kept
in sync and permits adding new flags combinations easily.

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=14268

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -273,9 +273,7 @@ test_sources = \
 	surface-pattern-scale-down.c			\
 	surface-pattern-scale-down-extend.c		\
 	surface-pattern-scale-up.c			\
-	text-antialias-gray.c				\
-	text-antialias-none.c				\
-	text-antialias-subpixel.c			\
+	text-antialias.c				\
 	text-cache-crash.c				\
 	text-glyph-range.c				\
 	text-pattern.c					\
