test: Fix check-ref-missing
ce3806510f8a20621f3daf7bd1afb18811fa1e92 changed the format of
Makefile.refs, breaking the check-ref-missing target.

Ignoring any line not containing a .png file fixes check-ref-missing
and makes it more robust.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -450,7 +450,7 @@ check-ref-missing:
 	@cd "$(srcdir)"; \
 	LANG=C; \
 	ret=true; \
-	tail -n+2 Makefile.refs | sed 's/\\$$//' | sed 's/^\t//' | sed 's/ $$//' > ref.list; \
+	grep '\.png \\$$' Makefile.refs | sed 's/ \\$$//' | tr -d '\t' > ref.list; \
 	if ! (find . -name '*.ref.png' ; find . -name '*.xfail.png' ; find . -name '*.new.png' ) \
 		| cut -d/ -f2- | sort | diff -u ref.list - ; then \
 		echo "*** Error: Sanity check failed"; \
