--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -194,6 +194,7 @@ test_sources = \
 	over-between-source.c				\
 	overlapping-glyphs.c				\
 	paint.c						\
+	paint-clip-fill.c				\
 	paint-repeat.c					\
 	paint-source-alpha.c				\
 	paint-with-alpha.c				\
