test: Always compile cairo-test-suite
I'm tired of having to explicitly type make cairo-test-suite.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -73,6 +73,8 @@ endif
 endif
 test_sources += $(test)
 
+noinst_PROGRAMS = cairo-test-suite # always build
+
 TESTS += cairo-test-suite$(EXEEXT)
 
 cairo-test-constructors.c: Makefile $(test_sources) make-cairo-test-constructors.sh
