tests,perf: Add a hatchings clip-test
A benchmark to test how close we get to reducing paint+clip to an ordinary
fill, and to check correctness.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -3,6 +3,7 @@ libcairo_perf_micro_sources = \
 	box-outline.c		\
 	composite-checker.c	\
 	fill.c			\
+	hatching.c		\
 	long-lines.c		\
 	mosaic.c		\
 	paint.c			\
