--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -12,6 +12,8 @@ AM_CPPFLAGS =					\
 
 AM_LDFLAGS = $(CAIRO_LDFLAGS)
 
+noinst_PROGRAMS = cairo-perf-trace cairo-perf-micro
+
 EXTRA_PROGRAMS += cairo-perf-micro \
 		  cairo-perf-trace \
 		  cairo-perf-diff-files \
