test,perf: Another hatching!
This one illustrates the quadratic explosion lurking in the clipping
code.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -2,6 +2,7 @@ libcairo_perf_micro_sources = \
 	cairo-perf-cover.c	\
 	box-outline.c		\
 	composite-checker.c	\
+	disjoint.c		\
 	fill.c			\
 	hatching.c		\
 	long-lines.c		\
