build: Fix automake error
b8f43617a98aeb6c10d554ed11b48a83fc9b5129 regressed the generation of
Makefiles. automake 1.10 fails when executed during ./autogen.sh:

automake: cairo_test_suite_OBJECTS should not be defined
test/Makefile.am:76:   while processing program `cairo-test-suite'

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -73,7 +73,7 @@ endif
 endif
 test_sources += $(test)
 
-noinst_PROGRAMS = cairo-test-suite # always build
+noinst_PROGRAMS = cairo-test-suite$(EXEEXT) # always build
 
 TESTS += cairo-test-suite$(EXEEXT)
 
