API: map-to-image and create-similar-image
A common requirement is the fast upload of pixel data. In order to
allocate the most appropriate image buffer, we need knowledge of the
destination. The most obvious example is that we could use a
shared-memory region for the image to avoid the transfer cost of
uploading the pixels to the X server. Similarly, gl, win32, quartz...

The other side of the equation is that for manual modification of a
remote surface, it would be more efficient if we can create a similar
image to reduce the transfer costs. This strategy is already followed
for the destination fallbacks and this merely exposes the same
capability for the application fallbacks.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -167,6 +167,7 @@ test_sources = \
 	linear-uniform.c				\
 	long-dashed-lines.c				\
 	long-lines.c					\
+	map-to-image.c					\
 	mask.c						\
 	mask-alpha.c					\
 	mask-ctm.c					\
